# blogger-auto

./: .env.example  .gitignore  README.md  blogger-theme-original.xml  blogger-theme-refactored.xml  canonical_report.csv  content_evolver.py  content_gap_detector.py  content_optimizer.py  content_quality_engine.py  delete_candidates.csv  delete_duplicates.py  duplicates_report.csv  generate_content.py  generated_topics.json  growth_detector.py  growth_report.txt  improvement_log.json  index_accelerator.py  index_log.json  keyword_discovery.py  link_graph_optimizer.py  optimization_candidates.json  optimization_report.json  orchestrator.py  package-lock.json  package.json  publish.py  repair_posts.py  requirements.txt  self_improving_loop.py  seo_graph.py  sync_blogger.sh  sync_from_blogger.py  test_agnes.py  theme.xml  topic_cluster.py  update_candidates.csv  validate_topic_engine.py
blogger-ai-publisher/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
blogger-ai-publisher/automation/: __init__.py  health.py  metrics.py  notifier.py  pipeline.py  queue.py  recovery.py  scheduler.py
blogger-ai-publisher/blogger/: __init__.py  auth.py  client.py  html_builder.py  image_uploader.py  labels.py  publisher.py  slug.py
blogger-ai-publisher/config/: logging.py  settings.py
blogger-ai-publisher/database/: database.py  init_db.py  models.py
blogger-ai-publisher/image_engine/: __init__.py  base.py  deduplicator.py  manager.py  metadata.py  optimizer.py  validator.py
blogger-ai-publisher/prompt_engine/: __init__.py  analyzer.py  builder.py  (+4 more)
(+294 files in other folders)
