[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blogger-ai-publisher"
version = "1.0.0"
description = "Production-ready autonomous Blogger publishing system with AI content generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:cacheprovider"
filterwarnings = ["ignore::DeprecationWarning"]
